# zero2prod-v1

./: .dockerignore  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml
migrations/: 20210820151050_create_subscriptions_table.sql  20210820191903_create_subscription_table.sql
scripts/: init_db.sh  sample_post.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
