[package]
name = "zero2prod"
version = "0.1.0"
authors = ["paulstey <paulstey@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.5"
config = "0.11.0"
serde = "1.0.126"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
env_logger = "0.9.0"
log = "0.4.14"
tracing = {version = "0.1", features = ["log"]}

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11.3"
tokio = { version = "1", features = ["macros"] }

[dependencies.sqlx]
version = "0.5.6"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
