[package]
name = "zero2prod"
version = "0.1.0"
authors = ["paulstey <paulstey@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.5"
config = "0.11.0"
serde = "1.0.126"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
tracing = {version = "0.1", features = ["log"]}
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.0"
tracing-log = "0.1.2"
tracing-actix-web = "0.4.0-beta.12"
serde-aux = "3.0.1"
log = "0.4"

[dev-dependencies]
actix-rt = "2"
once_cell = "1.8.0"
reqwest = "0.11.3"
tokio = { version = "1", features = ["macros"] }

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate", 
    "offline"
]
